--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="style.css">
         <title>Momentum</title>
     </head>  
-    <body>
-        <form id="login-form" class="hidden">
+    <body class="body">
+        <form id="login-form" class="hidden greetingPosition">
             <input 
             required
             maxlength="15"
@@ -16,16 +16,25 @@
             placeholder="What is your name?">
             <button>Log In</button>
         </form>
-        <h1 id="greeting" class="hidden"></h1>
-        <h2 id="clock">00:00:00</h2>
-        <form id="todo-form">
+        <h2 id="clock" class="clockFont">00:00:00</h2>
+        <h1 id="greeting" class="hidden greetingFont"></h1>        
+        <div id="quote">
+            <span class="quoteFont"></span>
+            <span class="authorFont"></span>
+        </div>
+        <div id="weather" class="weatherFont">
+            <span></span>
+            <span></span>
+        </div>
+        <form id="todo-form" class="toDoFont">
             <input type="text" placeholder="Write a To Do and Press Enter">
         </form>
-        <ul id="todo-list"></ul>
+        <ul id="todo-list" class="toDoLi"></ul>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
-        <script src=""></script>
+        <script src="js/backgraound.js"></script>
         <script src="js/todo.js"></script>
+        <script src="js/weather.js"></script>
     </body>
 </html>
