--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             maxlength="15"
             type="text" 
             placeholder="What is your name?">
-            <button>Log In</button>
+            <button class="btn">Log In</button>
         </form>
         <h2 id="clock" class="clockFont">00:00:00</h2>
-        <h1 id="greeting" class="hidden greetingFont"></h1>        
+        <h1 id="greeting" class="hidden greetingFont grt"></h1>        
         <div id="quote">
             <span class="quoteFont"></span>
             <span class="authorFont"></span>
